compositor: Destroy QOpenglTexture with SharedMemoryBuffer

When using OpenGLTexture in SharedMemoryBuffer, it is never freed.

Fixes: QTBUG-128350
Pick-to: 6.7 6.5
Change-Id: Ib277171c1b5409487dd236a97b54ce0e7547d6a1
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>
(cherry picked from commit bd3cdc5c1f76ae3a9558ab60e08c628781ceb16e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>